updated final result

--- a/demo-05.html
+++ b/demo-05.html
@@ -4,7 +4,7 @@
 </head>
 <body ng-controller="AppController">
 
-<img src="http://klaasantonmulder.files.wordpress.com/2011/08/utrecht-rabo-172.jpg">
+<img src="http://rabo.demo123.nl/rabobank.jpg">
 
 <h1>Transacties</h1>
 <p>Totaal: {{total|currency:"&euro; "}}</p>
