--- a/demo-06.html
+++ b/demo-06.html
@@ -4,7 +4,7 @@
 </head>
 <body ng-controller="AppController">
 
-<img src="http://klaasantonmulder.files.wordpress.com/2011/08/utrecht-rabo-172.jpg">
+<img src="http://rabo.demo123.nl/rabobank.jpg">
 
 <h1>Transacties</h1>
 <p>Totaal: {{total|currency:"&euro; "}}</p>
@@ -18,14 +18,12 @@
     <span>{{item.amount|currency:"&euro; "}}</span>
   </li>
 </ul>
-<!--
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.20/angular.min.js"></script>
--->
+
 <script src="http://rabo.demo123.nl/scripts.js"></script>
 <script>
 var app = angular.module('app', ['firebase']);
 app.controller('AppController', function($scope, $firebase){
-    var db = new Firebase('https://obar.firebaseio.com/demo');
+    var db = new Firebase('https://rabo.firebaseio.com/');
     $scope.items = $firebase(db);
     $scope.total = 0;
     $scope.addItem = function(){
