--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <title>Rabo demo</title>
 <link rel="stylesheet" href="http://rabo.demo123.nl/style.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body ng-controller="AppController">
 
