fixed bug in total amount

--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@ app.controller('AppController', function($scope, $firebase){
     };
 
     db.on('child_added', function(snapshot){
-        $scope.total += parseInt(snapshot.val().amount);
+        $scope.total += parseInt(snapshot.val().amount) || 0;
+    });
+
+    db.on('child_removed', function(snapshot){
+        $scope.total -= parseInt(parseInt(snapshot.val().amount) || 0);
     });
     
 });
